# UCA-schedule-generator

./: .gitignore  Dockerfile  README.md  base.py  config.py  consts.py  converter.py  docker-compose.yml  fitness.txt  main.py  package.json  print.py  pyproject.toml  requirements.txt  result  schedule_map.py  serializer.py  solutions.py  subjects.json  test_code.py
alembic/versions/: 2025-03-10_initial_migration.py  2025-04-01_fixed.py
back_tracking_demo_2/: configs.py  schedule_generator.py
back_tracking_demo_2/objects/: room.py  room_type.py  slots.py  subject.py  subject_pattern.py  subject_type.py
back_traking/: configs.py  exceptions.py  project_types.py  project_typing.py  schedule_generator.py  subject.py  subject_type.py
back_traking/data_types/: intructor.py  json_to_object.py  rooms.py  (+3 more)
bookaroom_populator/: target.xlsx  xlsx_reader.py
brute_force_2/: print_out.py  schedule_generator.py
brute_force_3/: balace.py  instructors.py  patterns.py  rooms.py  schedule.py  schedule_generator.py  serializer.py  subject.py
constraints/: room.py  slot.py  subject.py
data_structures/: dictionaries.py
data_types/: class_room.py  professor.py
deap_1/: models.py  schedule_generator.py
file_interactions/: base_xlsx.py  table_generator.py
fyp/: config.py  exceptions.py  utils.py
genetic_algorithm/: crossover.py  ga.py  individual.py  mutation.py
genetic_deap_demo_1/: settings.py  sorting.py
genetic_model/: crossover.py  fitness.py  mutation.py  population.py  selection.py
schedule/: __init__.py  builder.py  fitness.txt  run_ga.py  schedule.json  schedule.py  schedule.schedule_data
sources/: Course Memo_Spring 2023_ver05_10.01.23_updated by Serik M.xlsx  ~$Course Memo_Spring 2023_ver05_10.01.23_updated by Serik M.xlsx
src/: main.py  utils.py
test_1/: subjects.py
xlsx_files/: .~lock.CS Senior.xlsx#  CM Freshmen.xlsx  CM Junior.xlsx  CM Senior.xlsx  CM Sophomore.xlsx  CS Freshmen.xlsx  CS Junior.xlsx  CS Senior.xlsx  CS Sophomore.xlsx  Communication and Media lab.xlsx  Creative room.xlsx  Dry laboratory.xlsx  Green classroom.xlsx  Grey classroom.xlsx  Group 1 Preparatory.xlsx  Group 2 Preparatory.xlsx  Hardware laboratory.xlsx  IT Laboratory .xlsx  Red classroom.xlsx  Sport Bubble.xlsx  Wet laboratory .xlsx  White classroom.xlsx  Yellow classroom.xlsx  test.xlsx
(+133 files in other folders)
