[project]
name = "uca-schedule-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asyncpg>=0.30.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorclass==2.2.2",
    "coverage==7.6.12",
    "deap==1.4.2",
    "dnspython==2.7.0",
    "docopt==0.6.2",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.11",
    "fastapi-cli==0.0.7",
    "flake8==7.1.2",
    "flake8-quotes==3.4.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jose==1.0.0",
    "mako==1.3.9",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "numpy==2.2.3",
    "openpyxl==3.1.5",
    "orjson==3.10.15",
    "packaging==24.2",
    "passlib==1.7.4",
    "pip-upgrader==1.4.15",
    "pluggy==1.5.0",
    "pyasn1==0.4.8",
    "pycodestyle==2.12.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.8.1",
    "pyflakes==3.2.0",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "pytest-dotenv==0.5.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "rsa==4.9",
    "setuptools==75.8.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "starlette==0.46.1",
    "terminaltables==3.1.10",
    "typer==0.15.2",
    "types-passlib==1.7.7.20241221",
    "types-pyasn1==0.6.0.20250208",
    "types-python-jose==3.4.0.20250224",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]
